--- a/portfolio.html
+++ b/portfolio.html
@@ -73,94 +73,112 @@
         <!-- section_img -->
         <ul class="list">
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_one.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Banking App Interface Concept</h2>
-            <p class="portfolio_text">App</p>
+            <a href="" class="link">
+              <img
+                src="./images/images_portfolio/img_portfolio_one.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Banking App Interface Concept</h2>
+              <p class="portfolio_text">App</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_two.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Cashless Payment</h2>
-            <p class="portfolio_text">Marketing</p>
+            <a href="" class="link"
+              ><img
+                src="./images/images_portfolio/img_portfolio_two.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Cashless Payment</h2>
+              <p class="portfolio_text">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_three.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Meditation App</h2>
-            <p class="portfolio_text">App</p>
+            <a href="" class="link"
+              ><img
+                src="./images/images_portfolio/img_portfolio_three.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Meditation App</h2>
+              <p class="portfolio_text">App</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_four.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Taxi Service</h2>
-            <p class="portfolio_text">Marketing</p>
+            <a href="" class
+              ><img
+                src="./images/images_portfolio/img_portfolio_four.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Taxi Service</h2>
+              <p class="portfolio_text">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_five.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Screen Illustrations</h2>
-            <p class="portfolio_text">Desing</p>
+            <a href="" class="link"
+              ><img
+                src="./images/images_portfolio/img_portfolio_five.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Screen Illustrations</h2>
+              <p class="portfolio_text">Desing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_six.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Online Courses</h2>
-            <p class="portfolio_text">MArketing</p>
+            <a href="" class="link"
+              ><img
+                src="./images/images_portfolio/img_portfolio_six.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Online Courses</h2>
+              <p class="portfolio_text">MArketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_seven.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Instagram Stories Concept</h2>
-            <p class="portfolio_text">Desing</p>
+            <a href="" class="link"
+              ><img
+                src="./images/images_portfolio/img_portfolio_seven.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Instagram Stories Concept</h2>
+              <p class="portfolio_text">Desing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_eight.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Organic Food</h2>
-            <p class="portfolio_text">Web Site</p>
+            <a href="" class="link"
+              ><img
+                src="./images/images_portfolio/img_portfolio_eight.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Organic Food</h2>
+              <p class="portfolio_text">Web Site</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/images_portfolio/img_portfolio_nine.jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio_title">Fresh Coffee</h2>
-            <p class="portfolio_text">Web Site</p>
+            <a href="" class="link"
+              ><img
+                src="./images/images_portfolio/img_portfolio_nine.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio_title">Fresh Coffee</h2>
+              <p class="portfolio_text">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
