--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <h1 class="introduction_hero">Effective Solutions for Your Business</h1>
         <ul class="list">
           <li>
-            <button type="button" class="button_hero">
-              <span class="button_hero_text">order service</span>
+            <button type="button" class="section_one_button">
+              <span class="section_one_button_text">order service</span>
             </button>
           </li>
         </ul>
