--- a/portfolio.html
+++ b/portfolio.html
@@ -44,29 +44,19 @@
         <h1 hidden>Portfolio</h1>
         <ul class="list">
           <li>
-            <button type="button" class="button_portfolio">
-              <span class="button_portfolio_text">All</span>
-            </button>
+            <button type="button" class="btn_portfolio">All</button>
           </li>
           <li>
-            <button type="button" class="button_portfolio">
-              <span class="button_portfolio_text">Web Site</span>
-            </button>
+            <button type="button" class="button_portfolio">Web Site</button>
           </li>
           <li>
-            <button type="button" class="button_portfolio">
-              <span class="button_portfolio_text">App</span>
-            </button>
+            <button type="button" class="button_portfolio">App</button>
           </li>
           <li>
-            <button type="button" class="button_portfolio">
-              <span class="button_portfolio_text">Design</span>
-            </button>
+            <button type="button" class="button_portfolio">Design</button>
           </li>
           <li>
-            <button type="button" class="button_portfolio">
-              <span class="button_portfolio_text">Marketing</span>
-            </button>
+            <button type="button" class="button_portfolio">Marketing</button>
           </li>
         </ul>
         <!-- section_img -->
