--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
   <body>
     <!-- header_section -->
     <header class="header">
-      <nav class="link">
-
-        <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
+      <nav>
+        <a href="./index.html" class="link">Web<span class="studio">Studio</span></a>
 
         <ul class="list">
           <li>
-            <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
+            <a href="./index.html" class="button_nav"><span class="navigation">Studio</span></a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link"><span class="navigation">Portfolio</span></a>
+            <a href="./portfolio.html" class="button_nav"
+              ><span class="navigation">Portfolio</span></a
+            >
           </li>
           <li>
-            <a href="" class="link"><span class="navigation">Contacts</span></a>
+            <a href="" class="button_nav"><span class="navigation">Contacts</span></a>
           </li>
         </ul>
       </nav>
@@ -47,10 +48,7 @@
       <section class="section_one">
         <h1 class="introduction_hero">Effective Solutions for Your Business</h1>
 
-        <button type="button" class="section_one_button">
-          order service
-        </button>
-
+        <button type="button" class="section_one_button">order service</button>
       </section>
       <!-- section_2 -->
       <section class="section_two">
@@ -168,7 +166,7 @@
 
     <!-- footer_sectoin -->
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
+      <a href="./index.html" class="link">Web<span class="studio_footer">Studio</span></a>
       <p class="footer_text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
