--- a/portfolio.html
+++ b/portfolio.html
@@ -17,17 +17,19 @@
   <body>
     <!-- header -->
     <header class="header">
-      <nav class="link">
-        <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
+      <nav>
+        <a href="./index.html" class="link">Web<span class="studio">Studio</span></a>
         <ul class="list">
           <li>
-            <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
+            <a href="./index.html" class="button_nav"><span class="navigation">Studio</span></a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link"><span class="navigation">Portfolio</span></a>
+            <a href="./portfolio.html" class="button_nav"
+              ><span class="navigation">Portfolio</span></a
+            >
           </li>
           <li>
-            <a href="" class="link"><span class="navigation">Contacts</span></a>
+            <a href="" class="button_nav"><span class="navigation">Contacts</span></a>
           </li>
         </ul>
       </nav>
@@ -62,7 +64,7 @@
         <!-- section_img -->
         <ul class="list">
           <li>
-            <a href="" class="link">
+            <a href="" class="section_img">
               <img
                 src="./images/images_portfolio/img_portfolio_one.jpg"
                 alt="Banking App Interface Concept"
@@ -74,7 +76,7 @@
             >
           </li>
           <li>
-            <a href="" class="link"
+            <a href="" class="section_img"
               ><img
                 src="./images/images_portfolio/img_portfolio_two.jpg"
                 alt="Cashless Payment"
@@ -86,7 +88,7 @@
             >
           </li>
           <li>
-            <a href="" class="link"
+            <a href="" class="section_img"
               ><img
                 src="./images/images_portfolio/img_portfolio_three.jpg"
                 alt="Meditation App"
@@ -98,7 +100,7 @@
             >
           </li>
           <li>
-            <a href="" class="link"
+            <a href="" class="section_img"
               ><img
                 src="./images/images_portfolio/img_portfolio_four.jpg"
                 alt="Taxi Service"
@@ -110,7 +112,7 @@
             >
           </li>
           <li>
-            <a href="" class="link"
+            <a href="" class="section_img"
               ><img
                 src="./images/images_portfolio/img_portfolio_five.jpg"
                 alt="Screen Illustrations"
@@ -122,7 +124,7 @@
             >
           </li>
           <li>
-            <a href="" class="link"
+            <a href="" class="section_img"
               ><img
                 src="./images/images_portfolio/img_portfolio_six.jpg"
                 alt="Online Courses"
@@ -134,7 +136,7 @@
             >
           </li>
           <li>
-            <a href="" class="link"
+            <a href="" class="section_img"
               ><img
                 src="./images/images_portfolio/img_portfolio_seven.jpg"
                 alt="Instagram Stories Concept"
@@ -146,7 +148,7 @@
             >
           </li>
           <li>
-            <a href="" class="link"
+            <a href="" class="section_img"
               ><img
                 src="./images/images_portfolio/img_portfolio_eight.jpg"
                 alt="Organic Food"
@@ -158,7 +160,7 @@
             >
           </li>
           <li>
-            <a href="" class="link"
+            <a href="" class="section_img"
               ><img
                 src="./images/images_portfolio/img_portfolio_nine.jpg"
                 alt="Fresh Coffee"
@@ -174,7 +176,7 @@
     </main>
     <!-- portfolio_footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
+      <a href="./index.html" class="link">Web<span class="studio_footer">Studio</span></a>
       <p class="footer_text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
