--- a/portfolio.html
+++ b/portfolio.html
@@ -17,19 +17,17 @@
   <body>
     <!-- header -->
     <header class="header">
-      <nav>
-        <a href="./index.html" class="link">Web<span class="studio">Studio</span></a>
+      <nav class="link">
+        <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
         <ul class="list">
           <li>
-            <a href="./index.html" class="button_nav"><span class="navigation">Studio</span></a>
+            <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
           </li>
           <li>
-            <a href="./portfolio.html" class="button_nav"
-              ><span class="navigation">Portfolio</span></a
-            >
+            <a href="./portfolio.html" class="link"><span class="navigation">Portfolio</span></a>
           </li>
           <li>
-            <a href="" class="button_nav"><span class="navigation">Contacts</span></a>
+            <a href="" class="link"><span class="navigation">Contacts</span></a>
           </li>
         </ul>
       </nav>
@@ -64,7 +62,7 @@
         <!-- section_img -->
         <ul class="list">
           <li>
-            <a href="" class="section_img">
+            <a href="" class="link">
               <img
                 src="./images/images_portfolio/img_portfolio_one.jpg"
                 alt="Banking App Interface Concept"
@@ -76,7 +74,7 @@
             >
           </li>
           <li>
-            <a href="" class="section_img"
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_two.jpg"
                 alt="Cashless Payment"
@@ -88,7 +86,7 @@
             >
           </li>
           <li>
-            <a href="" class="section_img"
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_three.jpg"
                 alt="Meditation App"
@@ -100,7 +98,7 @@
             >
           </li>
           <li>
-            <a href="" class="section_img"
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_four.jpg"
                 alt="Taxi Service"
@@ -112,7 +110,7 @@
             >
           </li>
           <li>
-            <a href="" class="section_img"
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_five.jpg"
                 alt="Screen Illustrations"
@@ -124,7 +122,7 @@
             >
           </li>
           <li>
-            <a href="" class="section_img"
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_six.jpg"
                 alt="Online Courses"
@@ -136,7 +134,7 @@
             >
           </li>
           <li>
-            <a href="" class="section_img"
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_seven.jpg"
                 alt="Instagram Stories Concept"
@@ -148,7 +146,7 @@
             >
           </li>
           <li>
-            <a href="" class="section_img"
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_eight.jpg"
                 alt="Organic Food"
@@ -160,7 +158,7 @@
             >
           </li>
           <li>
-            <a href="" class="section_img"
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_nine.jpg"
                 alt="Fresh Coffee"
@@ -176,7 +174,7 @@
     </main>
     <!-- portfolio_footer -->
     <footer class="footer">
-      <a href="./index.html" class="link">Web<span class="studio_footer">Studio</span></a>
+      <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
       <p class="footer_text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
