--- a/portfolio.html
+++ b/portfolio.html
@@ -47,16 +47,16 @@
             <button type="button" class="btn_portfolio">All</button>
           </li>
           <li>
-            <button type="button" class="button_portfolio">Web Site</button>
+            <button type="button" class="btn_portfolio">Web Site</button>
           </li>
           <li>
-            <button type="button" class="button_portfolio">App</button>
+            <button type="button" class="btn_portfolio">App</button>
           </li>
           <li>
-            <button type="button" class="button_portfolio">Design</button>
+            <button type="button" class="btn_portfolio">Design</button>
           </li>
           <li>
-            <button type="button" class="button_portfolio">Marketing</button>
+            <button type="button" class="btn_portfolio">Marketing</button>
           </li>
         </ul>
         <!-- section_img -->
