--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
                 height="300"
               />
               <h2 class="portfolio_title">Screen Illustrations</h2>
-              <p class="portfolio_text">Desing</p></a
+              <p class="portfolio_text">Design</p></a
             >
           </li>
           <li>
@@ -130,7 +130,7 @@
                 height="300"
               />
               <h2 class="portfolio_title">Online Courses</h2>
-              <p class="portfolio_text">MArketing</p></a
+              <p class="portfolio_text">Marketing</p></a
             >
           </li>
           <li>
@@ -142,7 +142,7 @@
                 height="300"
               />
               <h2 class="portfolio_title">Instagram Stories Concept</h2>
-              <p class="portfolio_text">Desing</p></a
+              <p class="portfolio_text">Design</p></a
             >
           </li>
           <li>
