--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,13 @@
         <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
         <ul class="list">
           <li>
-            <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
+            <a href="./index.html" class="navigation">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link"><span class="navigation">Portfolio</span></a>
+            <a href="./portfolio.html" class="navigation">Portfolio</a>
           </li>
           <li>
-            <a href="" class="link"><span class="navigation">Contacts</span></a>
+            <a href="" class="navigation">Contacts</a>
           </li>
         </ul>
       </nav>
