--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <!-- header_section -->
     <header class="header">
       <nav class="link">
-
         <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
 
         <ul class="list">
@@ -33,7 +32,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="header_address">
         <ul class="list">
           <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
@@ -47,10 +46,7 @@
       <section class="section_one">
         <h1 class="introduction_hero">Effective Solutions for Your Business</h1>
 
-        <button type="button" class="section_one_button">
-          order service
-        </button>
-
+        <button type="button" class="section_one_button">order service</button>
       </section>
       <!-- section_2 -->
       <section class="section_two">
