--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="header_address">
         <ul class="list">
           <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
